assets/css/index.css
/* ... */
.search-item + .search-item {
  @apply mt-2;
}

.search-item {
  @apply bg-slate-50 rounded-xl mx-6 relative text-slate-700;
}

.search-item[aria-selected] {
  @apply bg-indigo-500 text-white;
}

.search-item:not([aria-selected]):hover,
.search-item:not([aria-selected]):focus-within {
  @apply bg-indigo-100 text-indigo-500;
}

.search-item > a {
  @apply relative w-full p-4 grid grid-cols-[auto,1fr,auto] items-center;
  font-size: 0.875rem;
}

.search-item-content {
  @apply flex flex-col;
}

.search-item-source {
  line-height: 1.5rem;
  font-weight: 600;
  color: theme('colors.slate.900');
  padding-top: 2rem;
  margin: 0 1.5rem 1rem;
}

.search-item-path {
  grid-column-start: 2;
  align-self: flex-start;
  margin-right: auto;
  font-size: 0.75rem;
  line-height: 1.5rem;
  font-weight: 600;
}

.search-item-title {
  @apply col-start-2 leading-6 truncate;
}

.search-item-title + .search-item-path {
  @apply mb-1;
}

.search-term-match {
  @apply font-semibold text-indigo-500 underline underline-offset-2 decoration-2 decoration-indigo-200;
}

[aria-selected] .search-term-match {
  @apply text-white;
}

.search-item-action {
  @apply flex-none ml-3.5 w-6 h-6;
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
}

[aria-selected] .search-item-action {
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23C7D2FE' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
}

.search-item:not([aria-selected]):hover .search-item-action,
.search-item:not([aria-selected]):focus-within .search-item-action {
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%236466F1' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
}

.search-footer {
  @apply flex-none flex justify-end border-t border-slate-100 py-4 px-6;
}

.search-footer a {
  @apply flex items-center text-slate-400 text-xs font-medium;
}

.search-footer svg {
  @apply w-6 h-auto ml-2 text-red-600;
}

.search-title {
  @apply text-lg leading-6 mb-10;
}

.search-title strong {
  @apply text-slate-900 font-normal;
}

.search-no-results {
  @apply absolute inset-0 flex justify-center items-center text-slate-400 text-lg leading-6;
}

.search-no-results .search-title {
  @apply text-slate-900 mb-0;
}

.redis-cli {
  @apply font-mono bg-slate-900 h-80 overflow-y-scroll text-neutral-50 px-4 py-2 rounded-b-xl;
}

.redis-cli > pre {
  white-space: pre-wrap;
}

.prose .redis-cli {
  @apply h-auto;
}

.prose .redis-cli > pre {
  @apply text-neutral-50 bg-transparent m-0 p-0;
}

.prose .redis-cli > .prompt {
  font-size: 0.875em;
}

.redis-cli > .prompt {
  display: flex;
}

.redis-cli > .prompt > span {
  white-space: pre-wrap;
}

.redis-cli > .prompt > input {
  flex: 1 1 auto;
  padding: 0;
  border: none;
  outline: none;
  background-color: transparent;
  font: inherit;
  color: inherit;
}

.page-feedback {
  @apply flex flex-col mx-12;
}

.feedback-submit {
  @apply grid gap-2;
}

.star-rating {
  @apply flex flex-row-reverse justify-around text-center text-xl items-center; 
}

.star-rating input {
  @apply hidden;
}

.star-rating label {
  @apply cursor-pointer text-neutral-400;
}

.star-rating :checked ~ label {
  @apply text-orange-400;
}

.star-rating label:hover,
.star-rating label:hover ~ label {
  @apply text-yellow-400;
}      

.codetabs .label {
  min-width: 4rem;
}

.codetabs .radiotab:focus + .label {
  @apply bg-transparent text-indigo-600;
}

.codetabs .radiotab:checked + .label {
  @apply bg-slate-900 border-slate-900 not-italic;
}

.codetabs .radiotab:checked + .label + .panel {
  @apply block;
}

.codetabs > .panel .highlight > .chroma {
  @apply rounded-tl-none m-0;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.codetabs > .panel .highlight .chroma > .lntable td:first-child .chroma {
  @apply rounded-none p-0;
}

.codetabs > .panel .highlight .chroma > .lntable td:last-child .chroma {
  @apply rounded-none p-0;
}

.codetabs > .panel:not([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
  @apply hidden;
}

.codetabs > .panel:where([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
  @apply opacity-60;
}

.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-Go > .hl {
  tab-size: 3ch;
  left: -3ch;
  position: relative;
}

.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-C\# > .hl,
.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-Java > .hl
{
  left: -8ch;
  position: relative;
}

.codetabs > .panel .highlight .chroma > code > .hl,
.codetabs > .panel .highlight .chroma > .lntable .lntd code > .hl {
  @apply bg-inherit;
}

.codetabs > .panel:where([aria-expanded]) #visibility-on,
.codetabs > .panel:not([aria-expanded]) #visibility-off {
  @apply hidden;
}

.codetabs > .panel:where([aria-expanded]) #visibility-off,
.codetabs > .panel:not([aria-expanded]) #visibility-on {
  @apply block;
}

.download-cards {
  @apply space-y-6 lg:space-y-0 max-w-[47rem] lg:max-w-full mx-auto lg:mx-0 lg:grid grid-cols-2 gap-x-6 items-start mb-[3.25rem];
}

.download-details {
  @apply w-full max-w-[47rem] mx-auto;
}
/* ... */

